# Renova

./: .gitignore  LICENSE  README.md  deployment_guide.md  font_test.html  package-lock.json  renova_demo.html
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  test_backend.py  verify_turso_conn.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/services/: calculators.py  emails.py  security.py  spreadsheets.py
backend/mock_emails/: email_collector_20260623_124040.txt  email_epr_partner_20260623_124054.txt  email_green_project_20260623_124040.txt
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/components/: ComparisonMatrix.tsx  EprStepper.tsx  EsgCalculator.tsx  EsgVision.tsx  HeroSection.tsx  InteractiveTimeline.tsx  Milestones.tsx  RdShowcase.tsx  RegistrationForms.tsx  ScrollReveal.tsx  Stakeholders.tsx  TeamSection.tsx
presentation/: renova_financial_dashboard_merged.html
